fix: adjust label styling in backup switch for better alignment

--- a/src/components/Preview/styles.scss
+++ b/src/components/Preview/styles.scss
@@ -7,6 +7,10 @@
     input {
         width: 30px;
         height: 30px;
-
+    }
+    label {
+        font-size: 13px;
+        margin-left: 5px;
+        text-align: left;
     }
 }
